--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 # Dependency directories
+node_modules/
 thumbnail-gulp/node_modules
+thumbnail-gulp/main.js
+dropdown/node_modules
+dropdown/main.js
